--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,15 @@
             Register
         </div>
         <div class="card-body">
-            <form>
+
+            {% if msg %}
+            <div class="alert alert-danger">
+                {{ msg }}
+            </div>
+            {% endif %}
+
+
+            <form method="POST" action="/auth/register">
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label>Email</label>
@@ -45,7 +53,7 @@
             </form>
         </div>
         <div class="card-footer text-muted">
-            <a href="#"> Already have an account? </a>
+            <a href="{{ url_for('login') }}"> Already have an account? </a>
         </div>
     </div>
 </div>
