--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,11 +8,23 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
+                    {% if user %}
                     <a class="nav-link" href="/">Home </a>
+                    {% else %}
+                    <a class="nav-link" href="{{ url_for('login') }}">Login </a>
+                    {% endif %}
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('addtodo') }}">Add todo </a>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                {% if user %}
+                <li class="nav-item m-1">
+                    <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                 </li>
+                {% else %}
+                <li class="nav-item m-1">
+                    <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+                </li>
+                {% endif %}
             </ul>
         </div>
     </nav>
